# savannah-wit

./: LICENSE  README.md  savannah-wit.cabal
app/: Main.hs
src/: Board.hs  MoveGen.hs  Util.hs
