name:                savannah-wit
version:             0.1.0.0
synopsis:            Chess engine written for fun
description:         Please see README.md
homepage:            http://github.com/jshholland/savannah-wit#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Holland
maintainer:          josh@inv.alid.pw
copyright:           2016 Josh Holland
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Board
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 1
  default-language:    Haskell2010

executable savannah-wit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , savannah-wit
  default-language:    Haskell2010

test-suite savannah-wit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , savannah-wit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jshholland/savannah-wit
